--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -24,25 +24,25 @@
 
  <section class="products">
  <div class="product">
-  <img src="C:\Users\UDMCL03-43\Downloads\steamdeck.jpg" alt="Product 1">
+  <img src="steamdeck.jpg" alt="Product 1">
   <h3>Steamdeck</h3>
   <p>₱25,000</p>
   <button onclick="addToCart('Steamdeck', 25000)">Add to Cart</button>
 </div>
 <div class="product">
-  <img src="C:\Users\UDMCL03-43\Downloads\xbox.jpg" alt="Product 2">
+  <img src="xbox.jpg" alt="Product 2">
   <h3>XBOX</h3>
   <p>₱25,000</p>
   <button onclick="addToCart('XBOX', 25000)">Add to Cart</button>
 </div>
 <div class="product">
-  <img src="C:\Users\UDMCL03-43\Downloads\playstation.jpg" alt="Product 3">
+  <img src="playstation.jpg" alt="Product 3">
   <h3>PlayStation 5</h3>
   <p>₱30,000</p>
   <button onclick="addToCart('PlayStation 5', 30000)">Add to Cart</button>
 </div>
 <div class="product">
-  <img src="C:\Users\UDMCL03-43\Downloads\nintendo.jpg" alt="Product 4">
+  <img src="nintendo.jpg" alt="Product 4">
   <h3>Nintendo Switch</h3>
   <p>₱30,000</p>
   <button onclick="addToCart('Nintendo Switch", 30000)">Add to Cart</button>
@@ -111,6 +111,7 @@ function submitOrder(event) {
   </script>
 </body>
 </html>
+
 
 
 
